@@ -1,0 +1,3 @@
+<project name="A">
+  <target name="x"/>
+</project>
