@@ -1,0 +1,4 @@
+<project name="B">
+   <import file="a.xml"/>
+   <target name="x" depends="A.x"/>
+</project>
